# FlyForge

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES.md  ROADMAP.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
crates/flyforge-core/: Cargo.toml
crates/flyforge-core/src/: dynamics.rs  energy.rs  export.rs  fatigue.rs  geometry.rs  inertia.rs  lib.rs  safety.rs  sensitivity.rs  solver.rs  stress.rs  thermal.rs  types.rs  unbalance.rs
crates/flyforge-server/: Cargo.toml
crates/flyforge-server/src/: main.rs
docs/: USER_GUIDE.md
docs/releases/: v0.3.0.md  v0.4.0-plan.md  v0.4.0.md
src/: App.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AccordionPanel.tsx  ComparePanel.tsx  CrossSection.tsx  ErrorBoundary.tsx  ExportPanel.tsx  Header.tsx  Layout.tsx  MainContent.tsx  NumberInput.tsx  PresetSelector.tsx  RadarChart.tsx  ResultsPanel.tsx  SectionPreview.tsx  Sidebar.tsx  VisualizationPanel.tsx
src/components/tabs/: GeometryTab.tsx  LayerEditor.tsx  MaterialTab.tsx  OperatingTab.tsx
src/i18n/: en.ts  index.tsx  zh.ts
src/presets/: index.ts
src/services/: api.ts
src/store/: index.ts  index.tsx  schemes.tsx
src/types/: index.ts
src/utils/: history.ts  persist.ts  schemes.ts  validation.ts
