[workspace]
resolver = "2"
members = ["crates/flyforge-core", "crates/flyforge-server"]
exclude = ["src-tauri"]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["FlyForge Team"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flyforge-core = { path = "crates/flyforge-core" }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3