[package]
name = "flyforge"
version = "0.1.0"
edition = "2021"
authors = ["FlyForge Team"]
license = "MIT"

[lib]
name = "flyforge_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
flyforge-core = { path = "../crates/flyforge-core" }
