[package]
name = "flyforge-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Flywheel kinematics and stress computation core"

[features]
default = []
openapi = ["dep:utoipa"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_repr = "0.1"
utoipa = { version = "4", features = ["chrono"], optional = true }