[package]
name = "flyforge-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "FlyForge HTTP API server"

[dependencies]
flyforge-core.workspace = true
serde.workspace = true
serde_json.workspace = true
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }